hyxf_devops/k8s/ingress/nginx_ingress/mandatory.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      serviceAccountName: nginx-ingress
      nodeSelector:
        appname: "nginx-ingress-controller"
      containers:
      - image: docker.51xf.cn/nginx/nginx-ingress:edge
        imagePullPolicy: Always
        name: nginx-ingress
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        args:
          - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
          - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
         #- -v=3 # Enables extensive logging. Useful for trooublshooting.
         #- -report-ingress-status
         #- -external-service=nginx-ingress
         #- -enable-leader-election
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
spec:
  type: NodePort 
  ports:
  - port: 80
    targetPort: 80
    nodePort: 6566
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    nodePort: 29892
    protocol: TCP
    name: https
  - port: 3306
    targetPort: 3306
    nodePort: 23306
    protocol: TCP
    name: mysql
  selector:
    app: nginx-ingress
